syntax = "proto3";

option java_package = "fctreddit.impl.grpc.generated_java";
option java_outer_classname = "ImageAdminProtoBuf";

import "google/protobuf/empty.proto";

service ImageAdmin {
	
	rpc deleteUserImage( AdminDeleteImageArgs ) returns ( google.protobuf.Empty ) {}
	 
}

message AdminDeleteImageArgs {
	string userId = 1;
	string imageId = 2;
	string token = 3;
}